--- a/blogApp/src/app/components/blog/blog.component.html
+++ b/blogApp/src/app/components/blog/blog.component.html
@@ -1,5 +1,6 @@
 <div class="content">
 
+    <!-- The form for the user to fill in the news information. -->
     <section class="form">
         <p class="form-definition">Fill in the form to publish a news item</p>
         <div class="form-items">
@@ -16,8 +17,9 @@
         </div>
     </section>
 
+    <!-- The news list. -->
     <aside class="articles">
-        <p class="news-title">News</p>
+        <p class="news-list-title">News</p>
         <div class="articles-container">
             <div class="news-list" [innerHTML]="addNews">
                 <!-- add news list -->
