--- a/blogApp/src/app/components/blog/blog.component.css
+++ b/blogApp/src/app/components/blog/blog.component.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap');
+
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
 .content {
     display: flex;
     flex-direction: column;
@@ -13,6 +19,8 @@
         flex-direction: row;
     }
 }
+
+/* =================================================================*/
 
 /* FORMULARIO */
 .form {
@@ -36,17 +44,24 @@
     padding: 12px;
     border-radius: 4px;
     flex-grow: 1;
+    background-color: transparent;
+    outline: 2px solid #1976d2;
+}
+
+.form-input:focus {
+    background-color: rgb(25, 118, 210, 0.5);
 }
 
 .form-button {
     width: 40%;
-    padding: 4px;
+    padding: 10px;
     border-radius: 4px;
     cursor: pointer;
     margin-top: 8px;
     color: #ffffff;
     background-color: #1976d2;
     border-color: #1976d2;
+    font-weight: 700;
 }
 
 @media screen and (min-width: 768px) {
@@ -59,6 +74,7 @@
     opacity: 0.5;
 }
 
+/* =================================================================*/
 
 /* NOTICIAS */
 .articles {
@@ -96,9 +112,17 @@
 
 .news-image {
     margin-bottom: 12px;
+    max-width: 200px;
     height: 150px;
 }
 
 .news-content {
     margin-top: 12px;
+    border: 1px solid #464a51;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.news-date {
+    padding: 10px 0px;
 }
